--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,113 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+::root {
+  font-family: "Jersey 10 Charted", sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #333;
+  /* background-color: #f0f0f0; */
+  background-color: #000;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#game-area {
+  font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* overflow-x: hidden; */
+  /* cursor: url("/haha.cur") 0 0, auto !important; */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #4a90e2;
+}
+body::-webkit-scrollbar-track {
+  background-color: #000;
+}
+a:hover {
+  transform: scale(1.2);
+  transition: all 0.5s ease-in-out;
+}
+a {
+  text-decoration: none;
+}
+@keyframes moveGround {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: -200%;
+  }
+}
+
+body {
+  margin: 0;
+  padding: 20px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/ground.png");
+  background-repeat: repeat-x;
+  /* background-size: cover; */
+  background-position: 0 center;
+  font-family: "flappy";
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  animation: moveGround 10s linear infinite;
+}
+
+
+#root {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+h1{
+  font-family: "Jersey 20", sans-serif;
+  color: #646cff;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #f0f0f0;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
